[tool.poetry]
name = "rag-project"
version = "0.1.0"
description = "RAG project scaffold"
authors = ["Gaurang <gaurangtech9@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.121.2,<0.122.0"
uvicorn = ">=0.18.0,<1.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
pydantic = ">=2.0.0,<3.0.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.0.0,<10.0.0"
black = ">=24.0.0,<26.0.0"
isort = ">=5.0.0,<9.0.0"
pre-commit = ">=4.0.0,<6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
